# Seed-Generator-Project

./: LICENSE  README.md  complex_test.db  pyproject.toml
.agents/rules/: executerule.md
BookStore-Demo/: check_users.sql  docker-compose.yml  logs.txt
BookStore-Demo/Backend/: Bookstore.slnx  Dockerfile
BookStore-Demo/Backend/Bookstore.API/: Bookstore.API.csproj  Bookstore.API.http  Program.cs  appsettings.Development.json  appsettings.json
BookStore-Demo/Backend/Bookstore.API/Controllers/: AdminController.cs  AuthController.cs  BasketController.cs  BooksController.cs  CategoriesController.cs  SalesController.cs
BookStore-Demo/Backend/Bookstore.API/Properties/: launchSettings.json
BookStore-Demo/Backend/Bookstore.Application/: Bookstore.Application.csproj
BookStore-Demo/Backend/Bookstore.Infrastructure/: Bookstore.Infrastructure.csproj  DependencyInjection.cs
BookStore-Demo/Frontend/: package-lock.json  package.json
BookStore-Demo/Frontend/src/: App.tsx  index.css
BookStore-Demo/docs/: TECH_STACK.md  personas.md  project_plan.md  spec.md  state.md  user-scenarios.md
Seed-Cli/: .env.example  .gitignore  CHANGELOG.md  apply_sql.py  create_complex_db.py  test.db
Seed-Cli/.github/workflows/: ci.yml
Seed-Cli/docs/: spec.md
Seed-Cli/omniseed/: __main__.py
Seed-Cli/omniseed/cli/: main.py
Seed-Cli/omniseed/domain/: config.py
Seed-Cli/omniseed/infrastructure/: ai_engine.py  cache_manager.py  schema_inspector.py
Seed-Cli/tests/: test_ai_engine.py  test_cache_manager.py  test_config_manager.py  test_database_executor.py  test_schema_inspector.py  test_usecases.py
docs/: project_plan.md  spec.md  state.md
omniseed/application/: usecases.py
omniseed/cli/: main.py
omniseed/domain/: config.py  state_hasher.py
omniseed/infrastructure/: ai_engine.py  cache_manager.py  database_executor.py
tests/: test_cache_manager.py  test_config_manager.py  test_e2e.py  test_state_hasher.py  test_usecases.py
(+79 files in other folders)
